# resume-as-code

./: .gitignore  LICENSE  README.md  my_resume.html  pyproject.toml
examples/: example_resume.json  example_resume.yaml
src/: cli.py  parser.py  pdf_exporter.py  renderer.py  schema.py
src/themes/: modern.html.j2  styles.css
tests/: test_cli.py  test_parser.py  test_pdf_exporter.py
