[tool.poetry]
name = "resume-as-code"
version = "0.1.0"
description = "Generate resumes from YAML, JSON, or Markdown to HTML and PDF"
authors = ["Srishti Chhabra <srishti11010@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/srishti11010/resume-as-code"
repository = "https://github.com/srishti11010/resume-as-code"
keywords = ["resume", "yaml", "json", "markdown", "pdf", "html", "cli"]

[tool.poetry.dependencies]
python = "^3.12"
click = "^8.1"
PyYAML = "^6.0"
pydantic = "^1.10"
jinja2 = "^3.1"
mistune = "^2.0"
weasyprint = "^59.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.0"
black = "^23.1"
flake8 = "^6.0"

[[tool.poetry.packages]]
include = "src"

[tool.poetry.scripts]
resume-as-code = "src.cli:cli"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
